--- a/package.json
+++ b/package.json
@@ -3,8 +3,17 @@
   "version": "1.0.0",
   "description": "Desarrollar una aplicación que introduciendo una URL de una página web devuelva todos los links que aparecen en ella con un formato de salida opcional.",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "jest"
+  },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/jest": "^29.2.0",
+    "babel-jest": "^29.2.1",
+    "jest": "^29.2.1",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
+  }
 }
