--- a/package.json
+++ b/package.json
@@ -4,16 +4,31 @@
   "description": "Desarrollar una aplicación que introduciendo una URL de una página web devuelva todos los links que aparecen en ella con un formato de salida opcional.",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' ./src/server.ts",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
+    "@types/supertest": "^2.0.12",
+    "babel-cli": "^6.26.0",
     "babel-jest": "^29.2.1",
+    "babel-preset-env": "^1.7.0",
     "jest": "^29.2.1",
+    "nodemon": "^2.0.20",
+    "superagent": "^8.0.2",
+    "supertest": "^6.3.0",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "axios": "^1.1.3",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   }
 }
