--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch './**/*.ts' --exec 'ts-node' ./src/server.ts",
-    "test": "jest"
+    "test": "jest --testEnvironment=node --runInBand ./tests"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
+    "@types/mongoose": "^5.11.97",
     "@types/supertest": "^2.0.12",
     "babel-cli": "^6.26.0",
     "babel-jest": "^29.2.1",
@@ -30,6 +31,8 @@
     "body-parser": "^1.20.1",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb-memory-server": "^8.9.3",
+    "mongoose": "^6.6.7"
   }
 }
