--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./build/src/server.js",
-    "build": "tsc -p .",
+    "build": "rm -rf ./build && tsc -p .",
     "dev": "nodemon ./src/server.ts",
     "test": "jest --testEnvironment=node --runInBand ./tests"
   },
