--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.0'
+
 services:
   app:
     container_name: nnergix-test-docker
@@ -6,3 +7,14 @@ services:
     build: ./
     ports:
       - 3000:3000
+    links: 
+      - mongodb
+  mongodb:
+    image: mongo:latest
+    ports: 
+      - 27017:27017
+    volumes:
+      - data:/data/db
+
+volumes:
+  data:
