passing variables throught docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - 3000:3000
     links: 
       - mongodb
+    environment:
+      - "DOCKER_URL=${DOCKER_URL}"
   mongodb:
     image: mongo:latest
     ports: 
